// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Chord Progression test suite should generate chords based on a movement timeline - free rhythm 1`] = `
Array [
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 480,
    "isRest": false,
    "next": 480,
    "time": 0,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 960,
    "time": 480,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 320,
    "isRest": false,
    "next": 1280,
    "time": 960,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 160,
    "isRest": true,
    "next": 1440,
    "time": 1280,
  },
  Object {
    "chord": Array [
      64,
      66,
      68,
      69,
      71,
      73,
    ],
    "chordName": "F#m11",
    "dur": 480,
    "isRest": false,
    "next": 1920,
    "time": 1440,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 2400,
    "time": 1920,
  },
  Object {
    "chord": Array [
      64,
      66,
      68,
      69,
      71,
      73,
    ],
    "chordName": "F#m11",
    "dur": 320,
    "isRest": false,
    "next": 2720,
    "time": 2400,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 160,
    "isRest": true,
    "next": 2880,
    "time": 2720,
  },
  Object {
    "chord": Array [
      64,
      68,
      73,
    ],
    "chordName": "C#m",
    "dur": 480,
    "isRest": false,
    "next": 3360,
    "time": 2880,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 3840,
    "time": 3360,
  },
  Object {
    "chord": Array [
      66,
      69,
      76,
      86,
      80,
    ],
    "chordName": "F#m9add13",
    "dur": 480,
    "isRest": false,
    "next": 4320,
    "time": 3840,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 160,
    "isRest": true,
    "next": 4480,
    "time": 4320,
  },
  Object {
    "chord": Array [
      66,
      69,
      76,
      86,
      80,
    ],
    "chordName": "F#m9add13",
    "dur": 320,
    "isRest": false,
    "next": 4800,
    "time": 4480,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 160,
    "isRest": true,
    "next": 4960,
    "time": 4800,
  },
  Object {
    "chord": Array [
      66,
      69,
      76,
      86,
      80,
    ],
    "chordName": "F#m9add13",
    "dur": 320,
    "isRest": false,
    "next": 5280,
    "time": 4960,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 640,
    "isRest": true,
    "next": 5920,
    "time": 5280,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 320,
    "isRest": false,
    "next": 6240,
    "time": 5920,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 480,
    "isRest": false,
    "next": 6720,
    "time": 6240,
  },
  Object {
    "chord": Array [
      62,
      69,
      65,
    ],
    "chordName": "Dm",
    "dur": 480,
    "isRest": false,
    "next": 7200,
    "time": 6720,
  },
  Object {
    "chord": Array [
      62,
      69,
      65,
    ],
    "chordName": "Dm",
    "dur": 320,
    "isRest": false,
    "next": 7520,
    "time": 7200,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 160,
    "isRest": true,
    "next": 7680,
    "time": 7520,
  },
]
`;

exports[`A Chord Progression test suite should generate chords based on a movement timeline - turn rhythm 1`] = `
Array [
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 240,
    "isRest": true,
    "next": 240,
    "time": 0,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 240,
    "isRest": false,
    "next": 480,
    "time": 240,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 240,
    "isRest": true,
    "next": 720,
    "time": 480,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
    ],
    "chordName": "F#m",
    "dur": 720,
    "isRest": false,
    "next": 1440,
    "time": 720,
  },
  Object {
    "chord": Array [
      66,
      71,
      73,
    ],
    "chordName": "F#sus4",
    "dur": 240,
    "isRest": false,
    "next": 1680,
    "time": 1440,
  },
  Object {
    "chord": Array [
      66,
      71,
      73,
    ],
    "chordName": "F#sus4",
    "dur": 240,
    "isRest": false,
    "next": 1920,
    "time": 1680,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 240,
    "isRest": true,
    "next": 2160,
    "time": 1920,
  },
  Object {
    "chord": Array [
      66,
      71,
      73,
    ],
    "chordName": "F#sus4",
    "dur": 720,
    "isRest": false,
    "next": 2880,
    "time": 2160,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      71,
    ],
    "chordName": "C#m7",
    "dur": 240,
    "isRest": false,
    "next": 3120,
    "time": 2880,
  },
  Object {
    "chord": Array [
      61,
      64,
      68,
      71,
    ],
    "chordName": "C#m7",
    "dur": 240,
    "isRest": false,
    "next": 3360,
    "time": 3120,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 3840,
    "time": 3360,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      76,
    ],
    "chordName": "F#m7",
    "dur": 240,
    "isRest": false,
    "next": 4080,
    "time": 3840,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      76,
    ],
    "chordName": "F#m7",
    "dur": 240,
    "isRest": false,
    "next": 4320,
    "time": 4080,
  },
  Object {
    "chord": Array [
      66,
      69,
      73,
      76,
    ],
    "chordName": "F#m7",
    "dur": 480,
    "isRest": false,
    "next": 4800,
    "time": 4320,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 5280,
    "time": 4800,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 240,
    "isRest": false,
    "next": 5520,
    "time": 5280,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 240,
    "isRest": false,
    "next": 5760,
    "time": 5520,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 240,
    "isRest": false,
    "next": 6000,
    "time": 5760,
  },
  Object {
    "chord": Array [
      64,
      69,
      74,
    ],
    "chordName": "Asus4",
    "dur": 720,
    "isRest": false,
    "next": 6720,
    "time": 6000,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 160,
    "isRest": true,
    "next": 6880,
    "time": 6720,
  },
  Object {
    "chord": Array [
      62,
      67,
      69,
    ],
    "chordName": "Dsus4",
    "dur": 320,
    "isRest": false,
    "next": 7200,
    "time": 6880,
  },
  Object {
    "chord": Array [],
    "chordName": "",
    "dur": 480,
    "isRest": true,
    "next": 7680,
    "time": 7200,
  },
]
`;

exports[`A Chord Progression test suite should generate progression with defined structures 1`] = `
Array [
  Object {
    "chord": Array [
      53,
      56,
      60,
      61,
      65,
      68,
      72,
      73,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 320,
    "time": 0,
  },
  Object {
    "chord": Array [
      53,
      56,
      60,
      61,
      65,
      68,
      72,
      73,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 640,
    "time": 320,
  },
  Object {
    "chord": Array [
      53,
      56,
      60,
      61,
      65,
      68,
      72,
      73,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 960,
    "time": 640,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      63,
    ],
    "chordName": "Gb6",
    "dur": 320,
    "isRest": false,
    "next": 1280,
    "time": 960,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      63,
    ],
    "chordName": "Gb6",
    "dur": 320,
    "isRest": false,
    "next": 1600,
    "time": 1280,
  },
  Object {
    "chord": Array [
      54,
      58,
      61,
      63,
    ],
    "chordName": "Gb6",
    "dur": 320,
    "isRest": false,
    "next": 1920,
    "time": 1600,
  },
  Object {
    "chord": Array [
      82,
      85,
      89,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 2240,
    "time": 1920,
  },
  Object {
    "chord": Array [
      82,
      85,
      89,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 2560,
    "time": 2240,
  },
  Object {
    "chord": Array [
      82,
      85,
      89,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 2880,
    "time": 2560,
  },
  Object {
    "chord": Array [
      49,
      56,
    ],
    "chordName": "Db6",
    "dur": 320,
    "isRest": false,
    "next": 3200,
    "time": 2880,
  },
  Object {
    "chord": Array [
      49,
      56,
    ],
    "chordName": "Db6",
    "dur": 320,
    "isRest": false,
    "next": 3520,
    "time": 3200,
  },
  Object {
    "chord": Array [
      49,
      56,
    ],
    "chordName": "Db6",
    "dur": 320,
    "isRest": false,
    "next": 3840,
    "time": 3520,
  },
  Object {
    "chord": Array [
      48,
      49,
      53,
      56,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 4160,
    "time": 3840,
  },
  Object {
    "chord": Array [
      48,
      49,
      53,
      56,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 4480,
    "time": 4160,
  },
  Object {
    "chord": Array [
      48,
      49,
      53,
      56,
    ],
    "chordName": "Fm6m",
    "dur": 320,
    "isRest": false,
    "next": 4800,
    "time": 4480,
  },
  Object {
    "chord": Array [
      58,
      65,
      66,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 5120,
    "time": 4800,
  },
  Object {
    "chord": Array [
      58,
      65,
      66,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 5440,
    "time": 5120,
  },
  Object {
    "chord": Array [
      58,
      65,
      66,
    ],
    "chordName": "Bbm6m",
    "dur": 320,
    "isRest": false,
    "next": 5760,
    "time": 5440,
  },
  Object {
    "chord": Array [
      51,
      54,
      58,
    ],
    "chordName": "Ebm6m",
    "dur": 320,
    "isRest": false,
    "next": 6080,
    "time": 5760,
  },
  Object {
    "chord": Array [
      51,
      54,
      58,
    ],
    "chordName": "Ebm6m",
    "dur": 320,
    "isRest": false,
    "next": 6400,
    "time": 6080,
  },
  Object {
    "chord": Array [
      51,
      54,
      58,
    ],
    "chordName": "Ebm6m",
    "dur": 320,
    "isRest": false,
    "next": 6720,
    "time": 6400,
  },
  Object {
    "chord": Array [
      73,
      80,
      76,
      81,
    ],
    "chordName": "Dbm6m",
    "dur": 320,
    "isRest": false,
    "next": 7040,
    "time": 6720,
  },
  Object {
    "chord": Array [
      73,
      80,
      76,
      81,
    ],
    "chordName": "Dbm6m",
    "dur": 320,
    "isRest": false,
    "next": 7360,
    "time": 7040,
  },
  Object {
    "chord": Array [
      73,
      80,
      76,
      81,
    ],
    "chordName": "Dbm6m",
    "dur": 320,
    "isRest": false,
    "next": 7680,
    "time": 7360,
  },
]
`;
